# coral

./: .directory  .gitignore  .gitmodules  CMakeLists.txt  README.md  package.xml  segfault_memmove_unaligned.txt
custom_scene/: custom_scene.yaml  rgb.yaml  rgb_launch.py
include/coral/: OceanScene.h  Scene.h  SceneEventHandler.h  ScopedTimer.h  SkyDome.h  SphereSegment.h  TextHUD.h  camera.h  coral_node.h  custom_scene.h  debug_msg.h  event_handler.h  link.h  marker.h  masks.h  osg_make_ref.h  resource_helpers.h  scene.h  scene_interface.h  scene_lock.h  scene_params.h  scene_type.h  transforms.h  urdf_parser.h  viewer.h  visual.h  visual_link.h  water.h  water_lights.h  weather.h
launch/: track_launch.py  waves_bridge_launch.py
msg/: Color.msg
osgocean/: CMakeLists.txt
osgocean/osgOcean/src/oceanExample/: CMakeLists.txt
osgocean/resources/: islands.urdf
osgocean/resources/shaders/: coral_scene.frag  coral_scene.vert  default_scene.frag  default_scene.vert
scripts/: cam_view.py  marker  spawn
src/: OceanScene.cpp  Scene.cpp  SkyDome.cpp  SphereSegment.cpp  camera.cpp  coral_main.cpp  coral_node.cpp  event_handler.cpp  link.cpp  link_visual.cpp  marker.cpp  resource_helpers.cpp  scene_interface.cpp  spawn.cpp  transforms.cpp  urdf_parser.cpp  viewer.cpp  visual.cpp  visual_link.cpp
src/oceanExample/: CMakeLists.txt  Scene.cpp  Scene.h  SceneEventHandler.h  TextHUD.h  application.cpp
src/oceanExample/done/: OceanScene  OceanScene.cpp  SkyDome.cpp  SkyDome.h  SphereSegment.cpp  SphereSegment.h
src/osg/: OceanScene.cpp  camera.cpp  resource_helpers.cpp  scene.cpp  viewer.cpp  visual.cpp  water.cpp  water_lights.cpp
src/ros/: link.cpp  marker.cpp  transforms.cpp  urdf_parser.cpp
src/srv_wrappers/: marker.cpp  random_node.h  spawn.cpp
srv/: Marker.srv  SceneColor.srv  Spawn.srv  Surface.srv
tests/: listener.cpp
