<?xml version="1.0"?>
<package format="3">
  <name>coral</name>
  <version>1.0.0</version>
  <description>osgOcean-based frontend for marine environments</description>
  <maintainer email="olivier.kermorgant@ec-nantes.fr">Olivier Kermorgant</maintainer>
  <license>GPL</license>  
  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>geometry_msgs</depend>
  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>urdfdom</depend>
  <depend>ament_index_cpp</depend>
  <depend>tf2_ros</depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
