<?xml version="1.0"?>
<package format="3">
  <name>coral</name>
  <version>1.0.0</version>
  <description>osgOcean-based frontend for marine environments</description>
  <maintainer email="olivier.kermorgant@ec-nantes.fr">Olivier Kermorgant</maintainer>
  <license>GPL</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>rosidl_default_generators</build_depend>
  <depend>libopenscenegraph-dev</depend>
  <depend>libfftw3-dev</depend>
  <depend>geometry_msgs</depend>
  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>urdfdom</depend>
  <depend>ament_index_cpp</depend>
  <depend>tf2_ros</depend>
  <depend>image_transport</depend>
  <depend>std_srvs</depend>

  <exec_depend>rosidl_default_runtime</exec_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
